# graph-creator

./: .gitignore  BUGFIXES_2025.md  BUGFIX_FLUTTER_ERRORS.md  CHANGELOG_LATEST.md  COMPLETE_FEATURE_SUMMARY.md  CUSTOMIZATION_IMPROVEMENTS.md  DATA_EDITOR_FEATURES.md  FEATURE_UPDATES.md  FILES_CREATED.md  INSTALLATION.md  LATEST_FIXES.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  run.sh
app/: __init__.py  main.py
app/charts/: __init__.py  mpl_renderer.py  plotly_renderer.py
app/models/: __init__.py  data_models.py  state.py
app/services/: __init__.py  data_loader.py  project_io.py  transforms.py
app/ui/: __init__.py  builder.py  canvas.py  components.py  dialogs.py
assets/: .gitkeep
docs/: BUGFIXES.md  INSTALLATION.md  PROJECT_SUMMARY.md  RUN_INSTRUCTIONS.md  USAGE.md
tests/: __init__.py  test_rendering.py  test_serialization.py  test_transforms.py
