[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-creator"
version = "1.0.0"
description = "A fully offline, customizable chart creation application built with Flet"
authors = [{name = "Graph Creator Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet==0.21.2",
    "matplotlib==3.8.2",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "pydantic==2.5.3",
    "scipy==1.11.4",
    "openpyxl==3.1.2",
]

[project.optional-dependencies]
interactive = [
    "plotly==5.18.0",
    "kaleido==0.2.1",
]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

